# adguard-sync

./: README.md  main.py
.github/workflows/: python-publish.yml
AdguardSync/: sync.py
adguard_sync/: .gitignore  setup.cfg  setup.py
