[metadata]
name = adguard-sync-mkapra
version = 1.0
author = Maximilian Kapra
author_email = maximilian@kapra.de
description = Sync dns rewrites on multiple adguards
long_description = Sync dns rewrites on multiple adguards
url = https://github.com/mkapra/adguard-sync
project_urls =
    Bug Tracker = https://github.com/mkapra/adguard-sync/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src